make my profile prettier

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   color: rgb(110, 110, 110);
   font-family: 'Montserrat', sans-serif;
   background-color: rgb(225, 225, 225);
-  background-image: url(images/peioend.jpg);
+  background-image: url(images/finale.jpg);
   background-attachment:fixed;
   background-repeat: no-repeat;
   background-size: cover;
